ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gwtestrancher-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - rancher.glennwehmeyer.com
    secretName: docker-registry-tls
  rules:
  - host: rancher.glennwehmeyer.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gwtestrancher-svc
          servicePort: 80
